--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/tapriandi/e-commerce#readme",
   "dependencies": {
+    "@google-cloud/storage": "^3.1.0",
+    "@google-cloud/vision": "^1.2.0",
     "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
@@ -26,6 +28,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0",
-    "mongoose": "^5.6.9"
+    "mongoose": "^5.6.9",
+    "multer": "^1.4.2"
   }
 }
