--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "dotenv": "^8.1.0",
+    "sweetalert2": "^8.16.3",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
